--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.konrad.apzumiproject.StartingActivity">
-    <Button
+    tools:context="com.example.konrad.apzumiproject.StartingActivity"
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/welcome"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
+        />
+    <Button
+        android:layout_below="@+id/welcomeText"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
         android:id="@+id/startbtn"
-        android:gravity="center_vertical"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        android:text="@string/start_activity"
 
-</RelativeLayout>
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/author"
+        />
+
+</LinearLayout>
