--- a/app/src/main/res/layout/singlelinerecyclerview.xml
+++ b/app/src/main/res/layout/singlelinerecyclerview.xml
@@ -7,12 +7,17 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     android:layout_marginLeft="4dp">
-    <me.fahmisdk6.avatarview.AvatarView
+    <!--<me.fahmisdk6.avatarview.AvatarView-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="50dp"-->
+        <!--app:avCornerRadius="7dp"-->
+        <!--android:id="@+id/avatar"-->
+        <!--/>-->
+    <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:avCornerRadius="7dp"
-        android:id="@+id/avatar"
-        />
+        
+        android:id="@+id/avatarr"/>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
